--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,5 +1,3 @@
-name: "Build and push images"
-
 on:
   workflow_dispatch:
   push:
@@ -15,7 +13,7 @@ jobs:
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKERHUB_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
+        DOCKERHUB_REPOSITORY: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
 
       steps:
       - name: Checkout code
@@ -35,9 +33,17 @@ jobs:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
-      - name: Push images to Docker hub
+      - name: Generate date-based tag
+        id: date_tag
+        run: echo "DATE_TAG=$(TZ='Asia/Shanghai' date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - name: Build and push images to Docker hub
         uses: docker/build-push-action@v5.1.0
         with:
+          # (推荐) 指定 Dockerfile 所在的目录
+          context: .
           push: true
-          platforms: linux/amd64, linux/arm64, linux/arm/v7
-          tags: ${{ env.DOCKERHUB_REPOSITORY }}
+          platforms: linux/amd64, linux/arm64
+          tags: |
+            ${{ env.DOCKERHUB_REPOSITORY }}:latest
+            ${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DATE_TAG }}
