--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -44,7 +44,7 @@ jobs:
           # (推荐) 指定 Dockerfile 所在的目录
           context: .
           push: true
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
           tags: |
             ${{ env.DOCKERHUB_REPOSITORY }}:latest
             ${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DATE_TAG }}
